# agent

./: .gitignore  AGENT_PROJECT_PLAN.md  pom.xml  run.sh
docs/: AGENT_EXECUTION_LOGIC.md  AgentGameFakeAppApi_摘要.md  PROMPT_CONFIG_AND_USAGE.md  PYTHON_HOUSING_AGENT_DESIGN.md  SYSTEM_PROMPT_HOUSING.md
python/: README.md  pyproject.toml  setup.py
python/src/housing_agent/: __init__.py  app.py  config.py  logger.py
python/src/housing_agent/agent/: __init__.py  chat_handler.py  model_client.py  prompts.py  state.py
python/src/housing_agent/tools/: __init__.py  client.py  executor.py  schemas.py
src/main/java/com/agent/housing/: HousingAgentTools.java  README_TOOLS.md
src/main/java/com/agent/housing/client/: HousingApiClient.java
src/main/java/com/agent/housing/config/: AgentConfig.java
src/main/java/com/agent/housing/logging/: LogType.java  SessionLogEntry.java  SessionLogger.java
src/main/java/com/agent/housing/server/: AgentServer.java  ChatHandler.java  ChatRequest.java  ModelApiClient.java  SessionContextManager.java
src/main/java/com/agent/housing/tools/: ToolDefinitions.java  ToolExecutor.java
src/main/java/com/agent/housing/tools/impl/: HouseTools.java  LandmarkTools.java  ToolUtils.java
