[project]
name = "housing-agent"
version = "0.1.0"
description = "租房 Agent 服务（Flask + LangChain）"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=2.3.0",
    "requests>=2.28.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.0.5",
    "langchain-core>=0.2.0",
    "langchain-community>=0.0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/housing_agent"]

